chore: add development dependencies for markdown linting and code formatting

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
-  "printWidth": 120,
-  "overrides": [{ "files": "*.md", "options": { "proseWrap": "always" } }]
+  "$schema": "https://json.schemastore.org/prettierrc",
+  "semi": false,
+  "singleQuote": true,
+  "printWidth": 140
 }
